--- a/src/index.html
+++ b/src/index.html
@@ -140,7 +140,7 @@
     <div class=" backdrop js-backdrop">
       <div class="modal">
         <div class="modal-content"></div>
-        <button type="button" class="close-modal" data-close-modal>x</button>
+        <button type="button" class="close-modal hidden" data-close-modal>×</button>
       </div>
     </div>
 
