--- a/src/index.html
+++ b/src/index.html
@@ -39,17 +39,17 @@
           <nav>
             <ul class="site-nav list">
               <li class="nav-item">
-                <a href="" class="link current link-home">Home</a>
+                <a href="" class="link current link-home" data-collection="home">Home</a>
               </li>
               <li class="nav-item" >
-               <a href="" class="link link-library">my library</a>
+               <a href="" class="link link-library" data-collection="collection">my library</a>
               </li>
               <li class="logged-in" style="display: none;">
                  <a href="" class="link link-library" id="logout">Logout</a>
                </li>
-              <li class="logged-out" style="display: none;">
+              <!-- <li class="logged-out" style="display: none;">
                   <a href="" class="link link-library" data-target="modal-login" data-open="login">Login</a>
-               </li>
+               </li> -->
                 <li class="logged-out" style="display: none;">
                   <a href="" class="link link-library" data-target="modal-signup" data-open="signup">Sign up</a>
                 </li>
@@ -71,8 +71,8 @@
           </button>
         </form>
         <div class="bottom-header visually-hidden">
-          <a href="#" class="link-header" ><button class="button header-button watched-btn ">Watched</button></a>
-         <a href="#" class="link-header" > <button class="button header-button queue-btn active-lib-btn">queue</button></a>
+          <a href="#" class="link-header" ><button class="button header-button watched-btn " data-collection="watched">Watched</button></a>
+         <a href="#" class="link-header" > <button class="button header-button queue-btn active-lib-btn" data-collection="queue">queue</button></a>
         </div>
 
         <p class="notification" id="mainError">
