--- a/src/index.html
+++ b/src/index.html
@@ -224,9 +224,7 @@
           with<svg class="footer-favorite-svg" width="14" height="12.75">
               <use href="./images/sprite.svg#icon-favorite"></use></svg></svg>by
           </span>
-          <a data-open="footer" class="footer-modal-link" href="#">go<span class="footer-text-upper">it       
-          </span> students
-          </a>
+          <a href="#" class="footer-modal-link" data-open="footer">GoIT Students</a>
         </p>
       </footer>
     </div>
